Add missing test-system.cjs script for load testing and system validation

--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "logs:staging": "serverless logs -f --stage staging",
     "logs:prod": "serverless logs -f --stage prod",
     "invoke": "serverless invoke -f",
-    "test": "node scripts/test-system.js",
-    "test:verbose": "node scripts/test-system.js --verbose",
-    "test:load": "node scripts/test-system.js --count=50",
-    "test:quick": "node scripts/test-system.js --count=5 --timeout=30000",
+    "test": "node scripts/test-system.cjs",
+    "test:verbose": "node scripts/test-system.cjs --verbose",
+    "test:load": "node scripts/test-system.cjs --count=50",
+    "test:quick": "node scripts/test-system.cjs --count=5 --timeout=30000",
     "test:unit": "jest tests/unit --coverage --passWithNoTests",
     "test:integration": "jest tests/integration --passWithNoTests",
     "test:e2e": "node tests/e2e/run-all-tests.cjs",
